# bitpacking

./: .gitignore  README.md  pyproject.toml
examples/: pack_unpack.py
src/bitpacking.egg-info/: PKG-INFO  SOURCES.txt
