[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bitpacking"
version = "0.0.1"
description = "Bit-packing and unpacking integer fields"
readme = "README.md"
authors = [
    { name="Simon Nieswand", email="simon.nieswand@gmail.com" }
]
license = { file = "LICENSE" }
requires-python = ">=3.7"
dependencies = []

[project.urls]
Homepage = "https://github.com/nieswand/bitpacking"
Repository = "https://github.com/nieswand/bitpacking"
Issues = "https://github.com/nieswand/bitpacking/issues"

[tool.setuptools.packages.find]
where = ["src"]
